Minimum Java is now 11.