@@ -379,7 +379,7 @@ public class XML implements Iterable<XMLCursor> {
         T obj;
         if (objClass != null) {
             try {
-                obj = objClass.newInstance();
+                obj = objClass.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new XMLException(
                         "This class could not be instantiated: " + objClass, e);
@@ -466,52 +466,51 @@ public class XML implements Iterable<XMLCursor> {
         try {
             obj = toObject(defaultObject);
         } catch (ConverterException e) {
-            if (e.getCause() instanceof ClassNotFoundException) {
-                String partialName = getString(XPATH_ATT_CLASS);
-                List<?> results = ClassFinder.findSubTypes(
-                        type, s -> s.endsWith(partialName));
-                if (results.size() > 1) {
-                    // see if only one of them matches a segment exactly.
-                    List<?> filteredResults = results.stream()
-                            .filter(c -> ((Class<?>) c).getName()
-                                    .endsWith("." + partialName))
-                            .collect(Collectors.toList());
-                    if (filteredResults.size() == 1) {
-                        LOG.debug("{} classes implementing \"{}\" and ending "
-                                + "with \"{}\" were found, but only one "
-                                + "matched an exact class name or class name "
-                                + "and package segment: {}",
-                                results.size(),
-                                type.getName(),
-                                partialName,
-                                ((Class<?>) filteredResults.get(0)).getName());
-                        results.retainAll(filteredResults);
-                    } else {
-                        throw new XMLException(results.size()
-                            + " classes implementing \""
-                            + type.getName() + "\" "
-                            + "and ending with \"" + partialName + "\" "
-                            + "where found when only 1 was expected. "
-                            + "Consider using fully qualified class name. "
-                            + "Found classes: "
-                            + results.stream()
-                                    .map(c -> ((Class<?>) c).getName())
-                                    .collect(Collectors.joining(", ")));
-                    }
-                }
-
-                if (results.isEmpty()) {
-                    throw new XMLException(
-                              "No class implementing \""
-                            + type.getName() + "\" "
-                            + "and ending with \"" + partialName + "\" "
-                            + "could be found. Check your classpath or "
-                            + "consider using fully qualified class name.");
-                }
-                obj = toObject((Class<T>) results.get(0), defaultObject);
-            } else {
+            if (!(e.getCause() instanceof ClassNotFoundException)) {
                 throw e;
             }
+            String partialName = getString(XPATH_ATT_CLASS);
+            List<?> results = ClassFinder.findSubTypes(
+                    type, s -> s.endsWith(partialName));
+            if (results.size() > 1) {
+                // see if only one of them matches a segment exactly.
+                List<?> filteredResults = results.stream()
+                        .filter(c -> ((Class<?>) c).getName()
+                                .endsWith("." + partialName))
+                        .collect(Collectors.toList());
+                if (filteredResults.size() == 1) {
+                    LOG.debug("{} classes implementing \"{}\" and ending "
+                            + "with \"{}\" were found, but only one "
+                            + "matched an exact class name or class name "
+                            + "and package segment: {}",
+                            results.size(),
+                            type.getName(),
+                            partialName,
+                            ((Class<?>) filteredResults.get(0)).getName());
+                    results.retainAll(filteredResults);
+                } else {
+                    throw new XMLException(results.size()
+                        + " classes implementing \""
+                        + type.getName() + "\" "
+                        + "and ending with \"" + partialName + "\" "
+                        + "where found when only 1 was expected. "
+                        + "Consider using fully qualified class name. "
+                        + "Found classes: "
+                        + results.stream()
+                                .map(c -> ((Class<?>) c).getName())
+                                .collect(Collectors.joining(", ")));
+                }
+            }
+
+            if (results.isEmpty()) {
+                throw new XMLException(
+                          "No class implementing \""
+                        + type.getName() + "\" "
+                        + "and ending with \"" + partialName + "\" "
+                        + "could be found. Check your classpath or "
+                        + "consider using fully qualified class name.");
+            }
+            obj = toObject((Class<T>) results.get(0), defaultObject);
         }
         if (obj != null && !type.isInstance(obj)) {
             throw new XMLException(
@@ -1026,8 +1025,8 @@ public class XML implements Iterable<XMLCursor> {
             Result outputTarget = new StreamResult(w);
 
             TransformerFactory factory = TransformerFactory.newInstance();
-            factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_DTD, "");
-            factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_STYLESHEET, "");
+            factory.setAttribute(XMLUtil.ACCESS_EXTERNAL_DTD, "");
+            factory.setAttribute(XMLUtil.ACCESS_EXTERNAL_STYLESHEET, "");
 
             Transformer t = factory.newTransformer();
             t.setOutputProperty(OutputKeys.OMIT_XML_DECLARATION, "yes");
@@ -1576,7 +1575,7 @@ public class XML implements Iterable<XMLCursor> {
         if (value == null) {
             return null;
         }
-        if (value.equals(NULL_XML_VALUE)) {
+        if (NULL_XML_VALUE.equals(value)) {
             return defaultValue;
         }
         return Converter.convert(value, type, defaultValue);
@@ -2154,12 +2153,12 @@ public class XML implements Iterable<XMLCursor> {
             // If an empty string, mark as empty to prevent it from being
             // interpreted as null when read back. See getNodeString(...)
             el.setAttribute(ATT_XML_SPACE, "empty");
-        } else if (StringUtils.isWhitespace(content)) {
-            // if contains only white space and not empty, add space preserve
-            // to make sure white spaces are kept when read back.
-            el.setAttribute(ATT_XML_SPACE, "preserve");
-            el.setTextContent(content);
         } else {
+            if (StringUtils.isWhitespace(content)) {
+                // if contains only white space and not empty, add space preserve
+                // to make sure white spaces are kept when read back.
+                el.setAttribute(ATT_XML_SPACE, "preserve");
+            }
             el.setTextContent(content);
         }
         return this;
@@ -2833,7 +2832,6 @@ public class XML implements Iterable<XMLCursor> {
             this(source, null);
         }
         private Builder(Object source, String rootElementName) {
-            super();
             this.source = source;
             this.rootElementName = rootElementName;
         }
@@ -2847,8 +2845,8 @@ public class XML implements Iterable<XMLCursor> {
             return this;
         }
         public XML create() {
-            this.errorHandler = defaultIfNull(errorHandler);
-            this.documentBuilderFactory = defaultIfNull(documentBuilderFactory);
+            errorHandler = defaultIfNull(errorHandler);
+            documentBuilderFactory = defaultIfNull(documentBuilderFactory);
 
             if (source instanceof Node) {
                 return new XML((Node) source,
